2009-02-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* plot/__go_draw_axes__.m: Pass "interpolate 0, 0" to gnuplot
	instead of "interpolate 4, 4".

2009-02-04  John W. Eaton  <jwe@octave.org>

	* audio/wavwrite.m, deprecated/splu.m, general/bitcmp.m,
	general/fliplr.m, general/flipud.m, general/genvarname.m,
	general/nargchk.m, general/nargoutchk.m, general/quadgk.m,
	general/rot90.m, geometry/griddata.m, geometry/rectint.m,
	geometry/voronoi.m, geometry/voronoin.m,
	help/__strip_html_tags__.m, image/brighten.m, image/imfinfo.m,
	image/imread.m, linear-algebra/cond.m, linear-algebra/condest.m,
	linear-algebra/dmult.m, linear-algebra/dot.m,
	linear-algebra/expm.m, linear-algebra/housh.m,
	linear-algebra/onenormest.m, linear-algebra/subspace.m,
	miscellaneous/compare_versions.m, optimization/__all_opts__.m,
	optimization/optimget.m, pkg/pkg.m, plot/__bar__.m,
	plot/__plr2__.m, plot/ribbon.m, plot/slice.m, polynomial/pchip.m,
	polynomial/roots.m, set/unique.m, signal/fractdiff.m,
	signal/hurst.m, specfun/beta.m, specfun/legendre.m,
	statistics/base/__quantile__.m, statistics/base/quantile.m,
	statistics/tests/cor_test.m,
	statistics/tests/kolmogorov_smirnov_test_2.m, strings/base2dec.m,
	strings/dec2base.m, strings/strcat.m, strings/validatestring.m,
	time/addtodate.m: Style fixes.

2009-02-04  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: remove redundant line.

2009-02-03  Jaroslav Hajek  <highegg@gmail.com>
	
	* optimization/Makefile.in: Add missing source.

2009-02-02  Rob Mahurin <rob@utk.edu>

	* general/interpft.m: Increase tolerance in tests, for FFTPACK.
	
2009-02-03  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/__all_opts__.m: Yield empty list in recursive calls.
	mlock to avoid unloading.

2009-01-30  John W. Eaton  <jwe@octave.org>

	* optimization/PKG_ADD: Delete.
	* optimization/fsolve.m, optimization/fzero.m,
	optimization/lsqnonneg.m: Use PKG_ADD: comment to call __all_opts__.

2009-01-30  Jaroslav Hajek  <highegg@gmail.com>
